--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.scroll > div {
+  height: 100%;
+  overflow: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
